--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "http-server": "^0.12.3",
     "jsonwebtoken": "^8.5.1",
     "regex": "^0.1.1"
