--- a/package.json
+++ b/package.json
@@ -9,10 +9,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "http-server": "^0.12.3",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.17",
     "regex": "^0.1.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MathiasFaber/Eksamensopgave2.git"
+  },
+  "bugs": {
+    "url": "https://github.com/MathiasFaber/Eksamensopgave2/issues"
+  },
+  "homepage": "https://github.com/MathiasFaber/Eksamensopgave2#readme"
 }
